--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mockman-js": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "uuid": "^8.3.2",
